<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_login">

    <fragment
        android:id="@+id/navigation_cameras"
        android:name="com.monitorapp.ui.camera.CameraFragment"
        android:label="@string/title_cameras"
        tools:layout="@layout/fragment_camera" />

    <fragment
        android:id="@+id/navigation_history"
        android:name="com.monitorapp.ui.history.HistoryFragment"
        android:label="@string/title_history"
        tools:layout="@layout/fragment_history" />

    <fragment
        android:id="@+id/navigation_settings"
        android:name="com.monitorapp.ui.settings.SettingsFragment"
        android:label="@string/title_settings"
        tools:layout="@layout/fragment_settings" />
        
    <fragment
        android:id="@+id/navigation_player"
        android:name="com.monitorapp.ui.player.VideoPlayerFragment"
        android:label="@string/title_player"
        tools:layout="@layout/fragment_video_player" />
        
    <fragment
        android:id="@+id/navigation_login"
        android:name="com.monitorapp.ui.auth.LoginFragment"
        android:label="@string/title_login"
        tools:layout="@layout/fragment_login" />
        
    <fragment
        android:id="@+id/navigation_register"
        android:name="com.monitorapp.ui.auth.RegisterFragment"
        android:label="@string/title_register"
        tools:layout="@layout/fragment_register" />
        
    <fragment
        android:id="@+id/navigation_change_password"
        android:name="com.monitorapp.ui.settings.ChangePasswordFragment"
        android:label="@string/change_password"
        tools:layout="@layout/fragment_change_password" />

</navigation>